--- a/cv.html
+++ b/cv.html
@@ -7,11 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+<!-- titolo della pagina -->
   <header>
         <h1>Currriculum Vitae - Gianni Pescatore</h1>
         <h3>Web Developer & Manager</h3>
         <hr>
- </header>
+  </header>
+<!-- corpo centrale della pagina -->
  <main>
         <h3>Info Personali</h3></dt>
         <img srxc="C:\Users\danut\Downloads\Downloads (1)\profilo.jpg" width="150" height="150">
@@ -71,6 +73,7 @@
         <p>autorizzo il trattamento dei miei dati</p>
         <hr>
  </main>
+ <!-- cpyright e ringraziamenti -->
  <footer>
         <h4>Copyrioght &#169<span>2021</span> - Tutti i diritti riservati</h4>
  </footer>    
