--- a/cv.html
+++ b/cv.html
@@ -16,8 +16,8 @@
 <!-- corpo centrale della pagina -->
  <main>
         <h3>Info Personali</h3></dt>
-        <img srxc="C:\Users\danut\Desktop\volto esercizio boolean.jpg" width="150" height="150">
-        <img srxc="C:\Users\danut\Downloads\Downloads (1)\profilo.jpg" width="150" height="150">
+        <img srxc="C:\Users\danut\Desktop\volto esercizio boolean.jpg" width="150" height="150"><p>Foto Profilo</p>
+        <img srxc="C:\Users\danut\Downloads\Downloads (1)\profilo.jpg" width="150" height="150"><p>La mia postazione di lavoro</p>
         <div>
             <img src="C:\Users\danut\Downloads\Downloads (1)\calendar.svg" width="25px" height="25">
             <strong >Data di Nascita:</strong>
