--- a/cv.html
+++ b/cv.html
@@ -26,12 +26,12 @@
         <div>
             <img src="C:\Users\danut\Downloads\Downloads (1)\smartphone.svg" width="25px" height="25">
             <strong>Telefono:</strong>
-            <span>+391234567890</span>
+            <a href="C:\Users\danut\Documents\Epicode esercizi\m1\w1\d1\Downloads (1)\smartphone.svg" title="contatto telefono">+391234567890z</a>
         </div>
         <div>
             <img src="C:\Users\danut\Downloads\Downloads (1)\whatsapp.svg" width="25px" height="25">
             <strong>Whatsapp:</strong>
-            <span>+391234567890</span>
+            <a href="C:\Users\danut\Documents\Epicode esercizi\m1\w1\d1\Downloads (1)\whatsapp.svg" title="mandami un messaggino">+391234567890</a>
         </div>
         <dl>
         <dt style="font-weight:bold">Su di me</dt>
